# CMakeJSON

./: .gitignore  CMakeJSON.json  CMakeLists.txt  CMakePresets.json  FindCMakeJSON.cmake  README.md
.github/: FUNDING.yml
CMakeJSON/: CMakeJSON.cmake  CMakeJSON_FindModule.cmake  CMakeJSON_Helpers.cmake  CMakeJSON_ParseJSON.cmake  CMakeJSON_Project.cmake  CMakeJSON_Project_Config.cmake  CMakeJSON_Project_Dependency.cmake  CMakeJSON_Target.cmake
CMakeJSON/design/: project.properties.txt
CMakeJSON/layouts/: README.txt  project_layout.txt  target_layout.txt
CMakeJSON/schemas/: find.schema.json  project.schema.json  project.schemas.json  target.schema.json  target.schemas.json
cmake_script_testing/: example.json  project_json_testing.json  read_example_json.cmake  read_project_json.cmake  regex_test.cmake  underscore_test.cmake
docs/: anatomy-cmake-project.md  faq.md  find.md  parsing.md  project.md  target.md  todo.md
examples/: CMakeLists.txt
examples/ProjectWithComponents/: CMakeLists.txt  PWC.json  PWC.target.json
examples/ProjectWithComponents/components/: README
examples/ProjectWithComponents/components/comp1/: CMakeLists.txt  comp1.json  comp1.target.json
examples/ProjectWithComponents/components/comp1/src/: comp1.cpp
examples/ProjectWithComponents/components/comp2/: CMakeLists.txt  comp2.json  comp2.target.json
examples/ProjectWithComponents/components/comp2/src/: comp2.cpp
examples/ProjectWithComponents/components/core/: CMakeLists.txt  core.json  core.target.json
examples/ProjectWithComponents/src/: big.cpp
examples/SimpleProject/: CMakeLists.txt  Executable.Target.json  Library.Target.json  Simple.Project.json
examples/SimpleProject/include/: simple.hpp
examples/SimpleProject/src/: simple_private.hpp  simplelib.cpp
examples/SimpleProjectTest/: CMakeLists.txt  Executable.Target.json  Library.Target.json  Simple.Project.json
examples/SimpleProjectTest/src/: simple.cpp
examples/SimpleProjectWithDep/: CMakeLists.txt  Executable.Target.json  SPWD.json
examples/SimpleProjectWithDep/cmake/: FindDummy.cmake  FindDummy.json  FindME.cmake
examples/SimpleProjectWithDep/src/: simple.cpp
examples/TestWithComponents/: CMakeLists.txt  TWC.json  TWC.target.json  main.cpp
test/examples/: CMakeLists.txt
(+4 files in other folders)
