cmake_minimum_required(VERSION 3.19)
set(CMakeJSON_ENABLE_PROJECT_OVERRIDE ON CACHE BOOL "Enable project override")
include(${CMAKE_CURRENT_LIST_DIR}/CMakeJSON/CMakeJSON.cmake)
project("CMakeJSON.json")
set(CMAKE_MESSAGE_CONTEXT_SHOW ON)
if(CMakeJSON_BUILD_EXAMPLES)
    add_subdirectory(examples)
endif()
if(CMakeJSON_BUILD_TESTING)
    add_subdirectory(test/examples)
endif()